[project]
name = "vlm-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "distro==1.9.0",
    "dotenv>=0.9.9",
    "filelock==3.19.1",
    "fsspec==2025.9.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.0",
    "idna==3.10",
    "jiter==0.11.0",
    "numpy==2.3.3",
    "openai==1.107.3",
    "packaging==25.0",
    "pillow==11.3.0",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "sniffio==1.3.1",
    "tokenizers==0.22.0",
    "tqdm==4.67.1",
    "transformers==4.56.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
]
